Maven stuff and build files

--- a/pixie/ant/build.properties
+++ b/pixie/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 pixie.name=pixie
-pixie.version=0.8.3
+pixie.version=0.8.4
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -35,11 +35,12 @@ manifest-lib-prefix=lib/
 ###########################################################
 #
 #  Used libraries ...
-jcommon-jar-file=jcommon-0.9.7-cvs.jar
+jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
 
 ##############################################################
 #
 # Generated files ...
 
 pixie-jar-file=${targetdir}${pixie.name}-${pixie.version}.jar
+pixie-bundle-file=${targetdir}${pixie.name}-${pixie.version}-bundle.jar
 pixie-junit-jar-file=${targetdir}${pixie.name}-junit-${pixie.version}.jar
