First work on the ExportDialogs .. more to come after the FOSDEM..

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -111,3 +111,9 @@ org.jfree.report.modules.gui.base.ProgressDialogEnabled=true
 # Defines, whether the progress bar should be visible when repaginating
 # the report. The progress bar is not available for the other exports.
 org.jfree.report.modules.gui.base.ProgressBarEnabled=true
+
+#
+# Defines, whether the export dialogs will store the users input
+# (except any passwords) into the local configuration base. Set this
+# to false if you are concerned about any privacy leaks. 
+org.jfree.report.modules.gui.base.StoreExportDialogInputs=true
