--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources.properties
@@ -88,6 +88,11 @@ statusline.error=Reportgeneration produced an error\: {0}
 
 preview-frame.title=Print Preview
 
+statusbar.warningIcon=org/jfree/report/modules/gui/base/resources/YellowCircle.gif
+statusbar.errorIcon=org/jfree/report/modules/gui/base/resources/RedCircle.gif
+statusbar.informationIcon=org/jfree/report/modules/gui/base/resources/BlueCircle.gif
+statusbar.otherIcon=org/jfree/report/modules/gui/base/resources/GreenCircle.gif
+
 ########################################################################
 # Translations of the Swing-resources
 AbstractButton.clickText=click
