--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
@@ -51,3 +51,4 @@ htmlexportdialog.warningTitle=Warning
 htmlexportdialog.zip-archives=ZIP archives
 htmlexportdialog.zip-export=ZIP file export
 htmlexportdialog.author=Author
+htmlexportdialog.exportMethod=Export method
