--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources.properties
@@ -27,6 +27,7 @@ excelexportdialog.strict-layout=Perform strict table layouting on export.
 excelexportdialog.targetIsEmpty=Please specify a filename for the Excel file.
 excelexportdialog.targetIsNoFile=The selected target is no ordinary file.
 excelexportdialog.targetIsNotWritable=The selected file is not writable.
+excelexportdialog.targetExistsWarning=The file ''{0}'' exists. Overwrite it?
 excelexportdialog.targetOverwriteConfirmation=The file ''{0}'' exists. Overwrite it?
 excelexportdialog.targetOverwriteTitle=Overwrite file?
 excelexportdialog.title=Title
