--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources.properties
@@ -15,6 +15,7 @@ csvexportdialog.encoding=Encoding
 csvexportdialog.errorTitle=Error
 csvexportdialog.export.data=Export the DataRow (Raw Data)
 csvexportdialog.export.printed_elements=Printed Elements  (Layouted Data)
+cvsexportdialog.export.columnnames=Add column names as first row
 csvexportdialog.exporttype=Select Export engine
 csvexportdialog.filename=Filename
 csvexportdialog.selectFile=Select File
@@ -27,6 +28,7 @@ csvexportdialog.strict-layout=Perform strict table layouting on export.
 csvexportdialog.targetIsEmpty=Please specify a filename for the CSV file.
 csvexportdialog.targetIsNoFile=The selected target is no ordinary file.
 csvexportdialog.targetIsNotWritable=The selected file is not writable.
+csvexportdialog.targetExistsWarning=The file ''{0}'' exists. Overwrite it?
 csvexportdialog.targetOverwriteConfirmation=The file ''{0}'' exists. Overwrite it?
 csvexportdialog.targetOverwriteTitle=Overwrite file?
 csvexportdialog.warningTitle=Warning
