Some work on the ExportDialogs; FullPrecision excel export for number and date cells.

--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources.properties
@@ -46,6 +46,7 @@ pdfsavedialog.selectFile=Select File
 pdfsavedialog.targetIsEmpty=Please specify a filename for the pdf file.
 pdfsavedialog.targetIsNoFile=The selected target is no ordinary file.
 pdfsavedialog.targetIsNotWritable=The selected file is not writable.
+pdfsavedialog.targetOverwriteWarning=The file ''{0}'' exists. Overwrite it?
 pdfsavedialog.targetOverwriteConfirmation=The file ''{0}'' exists. Overwrite it?
 pdfsavedialog.targetOverwriteTitle=Overwrite file?
 pdfsavedialog.title=Title
