--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources.properties
@@ -23,17 +23,20 @@ plain-text-exportdialog.filename=Filename
 plain-text-exportdialog.font-settings=Font settings
 plain-text-exportdialog.lines-per-inch=lpi (Lines per inch)
 plain-text-exportdialog.printer=Printer type
-plain-text-exportdialog.printer.epson=Epson ESC/P compatible
+plain-text-exportdialog.printer.epson9=Epson ESC/P compatible 9 pin printer
+plain-text-exportdialog.printer.epson24=Epson ESC/P compatible 24 pin printer
 plain-text-exportdialog.printer.ibm=IBM compatible
 plain-text-exportdialog.printer.plain=Plain text output
 plain-text-exportdialog.selectFile=Select File
 plain-text-exportdialog.targetIsEmpty=Please specify a filename for the CSV file.
 plain-text-exportdialog.targetIsNoFile=The selected target is no ordinary file.
 plain-text-exportdialog.targetIsNotWritable=The selected file is not writable.
+plain-text-exportdialog.targetOverwriteWarning=The file ''{0}'' exists. Overwrite it?
 plain-text-exportdialog.targetOverwriteConfirmation=The file ''{0}'' exists. Overwrite it?
 plain-text-exportdialog.targetOverwriteTitle=Overwrite file?
 plain-text-exportdialog.warningTitle=Warning
 plain-text-exportdialog.cancel=Cancel
+plain-text-exportdialog.fileDescription=Text files
 
 plaintext-export.progressdialog.title=Exporting to a text file ...
 plaintext-export.progressdialog.message=The report is now exported into a text file ...
