--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
@@ -44,6 +44,7 @@ htmlexportdialog.targetIsEmpty=Please specify a filename for the Html file.
 htmlexportdialog.targetIsNoFile=The selected target is no ordinary file.
 htmlexportdialog.targetIsNotWritable=The selected file is not writable.
 htmlexportdialog.targetOverwriteConfirmation=The file ''{0}'' exists. Overwrite it?
+htmlexportdialog.targetExistsWarning=The file ''{0}'' exists. Overwrite it?
 htmlexportdialog.targetOverwriteTitle=Overwrite file?
 htmlexportdialog.targetPathIsAbsolute=The specified target path denotes an absolute directory.\nPlease enter a data directory within the ZIP file.
 htmlexportdialog.title=Title
@@ -52,3 +53,4 @@ htmlexportdialog.zip-archives=ZIP archives
 htmlexportdialog.zip-export=ZIP file export
 htmlexportdialog.author=Author
 htmlexportdialog.exportMethod=Export method
+htmlexportdialog.exportFormat=Export format
