Locales converter stuff

--- a/jfreereport-tools/ant/build.properties
+++ b/jfreereport-tools/ant/build.properties
@@ -31,9 +31,11 @@ manifest-lib-prefix=lib/
 #
 #  Used libraries ...
 jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
+jcommon-xml-jar-file=jcommon-xml-1.0.0-pre2-cvs.jar
 common-logging-jar-file=commons-logging.jar
 common-beanutils-jar-file=commons-beanutils.jar
 common-collections-jar-file=commons-collections.jar
+java-tools-jar-file=/opt/j2sdk1.4.2_06/lib/tools.jar
 
 ##############################################################
 #
