--- a/jfreereport-tools/ant/build.xml
+++ b/jfreereport-tools/ant/build.xml
@@ -19,7 +19,7 @@
 <!-- If you have comments about this script, please post a message -->
 <!-- in the JFreeReport forum. -->
 
-<project name="jfreereport-ext" default="all" basedir="..">
+<project name="jfreereport-tools" default="all" basedir="..">
 
   <!-- Runns some tests, to identify the used JDK implementation -->
   <target name="init">
@@ -34,6 +34,7 @@
 
     <echo>
       Available features:
+        JavaTools  : ${java-tools-jar-file}
         Java1.3    : ${java-1.3.present}
         Java1.4    : ${java-1.4.present}
     </echo>
@@ -60,9 +61,11 @@
       <include name="org/jfree/report/dev/**/*.java"/>
       <classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${jcommon-xml-jar-file}"/>
         <pathelement location="${libdir}/${common-logging-jar-file}"/>
         <pathelement location="${libdir}/${common-collections-jar-file}"/>
         <pathelement location="${libdir}/${common-beanutils-jar-file}"/>
+        <pathelement location="${java-tools-jar-file}"/>
       </classpath>
     </javac>
 
@@ -92,9 +95,11 @@
       overview="source/overview.html">
       <classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${jcommon-xml-jar-file}"/>
         <pathelement location="${libdir}/${common-logging-jar-file}"/>
         <pathelement location="${libdir}/${common-collections-jar-file}"/>
         <pathelement location="${libdir}/${common-beanutils-jar-file}"/>
+        <pathelement location="${java-tools-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
         <include name="org/jfree/report/**"/>
@@ -107,22 +112,47 @@
       <pathelement location="${libdir}/${gnujaxp-jar-file}"/>
       <pathelement location="${jfreereport-tools-jar-file}"/>
       <pathelement location="${libdir}/${jcommon-jar-file}"/>
+      <pathelement location="${libdir}/${jcommon-xml-jar-file}"/>
       <pathelement location="${libdir}/${common-logging-jar-file}"/>
       <pathelement location="${libdir}/${common-collections-jar-file}"/>
       <pathelement location="${libdir}/${common-beanutils-jar-file}"/>
+      <pathelement location="${java-tools-jar-file}"/>
     </path>
     <javadoc
         doclet="org.jfree.report.dev.beans.BeanInfoDoclet"
-        docletpathref="doclet.classpath">
-      <classpath>
-        <pathelement location="${libdir}/${jcommon-jar-file}"/>
-      </classpath>
+        docletpathref="doclet.classpath" classpathref="doclet.classpath">
       <packageset dir="source" defaultexcludes="yes">
         <include name="org/jfree/report/dev"/>
       </packageset>
     </javadoc>
 
   </target>
+
+  <target name="convert-locales" depends="init, compile">
+    <path id="doclet.classpath">
+      <pathelement location="${libdir}/${gnujaxp-jar-file}"/>
+      <pathelement location="${jfreereport-tools-jar-file}"/>
+      <pathelement location="${libdir}/${jcommon-jar-file}"/>
+      <pathelement location="${libdir}/${jcommon-xml-jar-file}"/>
+      <pathelement location="${libdir}/${common-logging-jar-file}"/>
+      <pathelement location="${libdir}/${common-collections-jar-file}"/>
+      <pathelement location="${libdir}/${common-beanutils-jar-file}"/>
+      <pathelement location="${java-tools-jar-file}"/>
+      <pathelement location="/home/src/jfreereport/version-0.8.4/jfreereport/jfreereport-0.8.4_11-all.jar"/>
+      <pathelement location="/home/src/jfreereport/version-0.8.4/jfreereport/jfreereport-0.8.4_11-demo.jar"/>
+    </path>
+    <javadoc
+        doclet="org.jfree.report.dev.locales.LocalesConverterDoclet"
+        docletpathref="doclet.classpath" classpathref="doclet.classpath" maxmemory="256m" >
+      <arg value="-target"/>
+      <arg value="locales"/>
+      <arg value="-merge"/>
+      <arg value="/home/src/jfreereport/head/jfreereport/source"/>
+      <packageset dir="/home/src/jfreereport/version-0.8.4/jfreereport/source" />
+    </javadoc>
+
+  </target>
+
   <target name="all" depends="init, compile, javadoc"/>
 </project>
 
