TableLayouter fixed to print elements with y > 32.768 and HTML target moves link outside the div-element.

--- a/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
@@ -9,4 +9,4 @@
 #
 org.jfree.report.modules.output.table.base.StrictLayout=false
 
-org.jfree.report.targets.table.TableWriter.DebugReportLayout=false
+org.jfree.report.targets.table.TableWriter.DebugReportLayout=true
