ReportConfiguration utility updated . Accelerators in the localisations fixed. Fixed a null pointer in the AbstractExportDialog

--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
@@ -10,14 +10,14 @@ action.about.description=Information about the application
 action.close.description=exits JFreeReportDemo
 action.close.mnemonic=VK_E
 action.close.name=Exit
-action.close.accelerator=control VK_X
+action.close.accelerator=VK_X
 
 action.print-preview.description=Preview the report
 action.print-preview.icon=org/jfree/report/modules/gui/base/resources/PrintPreview24.gif
 action.print-preview.mnemonic=VK_P
 action.print-preview.name=Print Preview...
 action.print-preview.small-icon=org/jfree/report/modules/gui/base/resources/PrintPreview16.gif
-action.print-preview.accelerator=control VK_P
+action.print-preview.accelerator=VK_P
 
 exitdialog.message=Are you sure that you want to exit the program?
 exitdialog.title=Confirmation ..
