--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -84,14 +84,14 @@ org.jfree.report.modules.gui.base.Zoom=enable
 #
 # Defines, whether and how the exit-dialog functionallity will be exposed to
 # the user. Possible values are:
-#   "disable" to completly remove the zoom elements from the menu and toolbar
+#   "disable" to completly remove the close elements from the menu and toolbar
 #   "toolbar" to have this functionality on the toolbar only
 #   "menubar" to have this functionality in the menu only
 #   "enable"  to show the functionality in the menu and the toolbar
 #
 # The exit menu entry cannot be disabled, the system only checks, whether this
 # button should appear in the toolbar.
-org.jfree.report.modules.gui.base.Close=enable
+org.jfree.report.modules.gui.base.Close=menubar
 
 #
 # Defines, whether a menubar will be available in the preview.
