--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources.properties
@@ -19,7 +19,7 @@ action.close.icon=org/jfree/report/modules/gui/base/resources/Quit24.gif
 action.close.mnemonic=VK_C
 action.close.name=Close
 action.close.small-icon=org/jfree/report/modules/gui/base/resources/Quit16.gif
-action.close.accelerator=control VK_X
+action.close.accelerator=VK_X
 
 action.firstpage.accelerator=VK_HOME
 action.firstpage.description=Switch to the first page
@@ -38,7 +38,7 @@ action.forward.accelerator=VK_PAGE_DOWN
 action.gotopage.description=View a page directly
 action.gotopage.mnemonic=VK_G
 action.gotopage.name=Go to page ...
-action.gotopage.accelerator=control VK_G
+action.gotopage.accelerator=VK_G
 
 action.lastpage.description=Switch to the last page
 action.lastpage.icon=org/jfree/report/modules/gui/base/resources/LastPage24.gif
