--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources.properties
@@ -6,7 +6,7 @@ action.save-as.icon=org/jfree/report/modules/gui/base/resources/SaveAs24.gif
 action.save-as.mnemonic=VK_A
 action.save-as.name=Save As PDF...
 action.save-as.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.save-as.accelerator=control VK_S
+action.save-as.accelerator=VK_S
 
 error.processingfailed.title=Report processing failed
 error.processingfailed.message=Error on processing this report\: {0}
