--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources.properties
@@ -6,7 +6,7 @@ action.export-to-plaintext.icon=org/jfree/report/modules/gui/base/resources/Save
 action.export-to-plaintext.mnemonic=VK_T
 action.export-to-plaintext.name=Save as text file...
 action.export-to-plaintext.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-plaintext.accelerator=control VK_T
+action.export-to-plaintext.accelerator=VK_T
 
 error.processingfailed.title=Report processing failed
 error.processingfailed.message=Error on processing this report\: {0}
