--- a/jfreereport/source/org/jfree/report/modules/gui/print/resources/print-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/resources/print-export-resources.properties
@@ -7,7 +7,7 @@ action.page-setup.name=Page Setup
 action.page-setup.small-icon=org/jfree/report/modules/gui/base/resources/PageSetup16.gif
 action.page-setup.description=Page Setup
 
-action.print.accelerator=control VK_P
+action.print.accelerator=VK_P
 action.print.description=Print report
 action.print.icon=org/jfree/report/modules/gui/base/resources/Print24.gif
 action.print.mnemonic=VK_P
