--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources.properties
@@ -6,7 +6,7 @@ action.export-to-excel.icon=org/jfree/report/modules/gui/base/resources/SaveAs24
 action.export-to-excel.mnemonic=VK_E
 action.export-to-excel.name=Export to Excel...
 action.export-to-excel.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-excel.accelerator=control VK_E
+action.export-to-excel.accelerator=VK_E
 
 error.processingfailed.title=Report processing failed
 error.processingfailed.message=Error on processing this report\: {0}
