--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources.properties
@@ -6,7 +6,7 @@ action.export-to-html.icon=org/jfree/report/modules/gui/base/resources/SaveAs24.
 action.export-to-html.mnemonic=VK_H
 action.export-to-html.name=Export to HTML...
 action.export-to-html.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-html.accelerator=control VK_H
+action.export-to-html.accelerator=VK_H
 
 error.processingfailed.title=Report processing failed
 error.processingfailed.message=Error on processing this report\: {0}
