Resolved some warnings for Eclipse configured with paranoid compile settings.

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -11,8 +11,8 @@ jfreereport.version=0.8.5
 # This defines the compiler settings. Optimizing would remove
 # the debug information, so we dont do that. This may be selfish,
 # but these settings guarantee better bug-reports :)
-build.debug=false
-build.optimize=true
+build.debug=true
+build.optimize=false
 build.deprecation=true
 
 #
@@ -59,10 +59,10 @@ jakarta-poi-jar-file=poi-2.5.1-final-20040804.jar
 #
 # Generated files ...
 jfreereport-all-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
-jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-demo.jar
+jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-demo-${jfreereport.version}.jar
 jfreereport-bundle-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-bundle.jar
 
-core-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-core.jar
+core-jar-file=${targetdir}${jfreereport.name}-core-${jfreereport.version}.jar
 
 module-misc-beanshell-file=${targetdir}${jfreereport.name}-misc-beanshell-${jfreereport.version}.jar
 module-misc-configstore-base-file=${targetdir}${jfreereport.name}-misc-configstore-base-${jfreereport.version}.jar
