--- a/jfreereport/.classpath
+++ b/jfreereport/.classpath
@@ -2,11 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/bsh-1.2b6.jar"/>
-	<classpathentry kind="lib" path="lib/gnujaxp.jar"/>
-	<classpathentry kind="lib" path="lib/itext-1.00.jar"/>
-	<classpathentry kind="lib" path="lib/jcommon-0.9.2.jar"/>
-	<classpathentry kind="lib" path="lib/pixie-0.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/poi-2.5-final-20040302.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bsh-1.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gnujaxp.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.0-pre2-cvs.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcommon-xml-1.0.0-pre2-cvs.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pixie-0.8.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-2.5.1-final-20040804.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
