--- a/pixie/ant/build.properties
+++ b/pixie/ant/build.properties
@@ -11,8 +11,8 @@ pixie.version=0.8.4
 # This defines the compiler settings. Optimizing would remove
 # the debug information, so we dont do that. This may be selfish,
 # but these settings guarantee better bug-reports.
-build.debug=false
-build.optimize=true
+build.debug=true
+build.optimize=false
 build.deprecation=true
 
 #
@@ -35,7 +35,7 @@ manifest-lib-prefix=lib/
 ###########################################################
 #
 #  Used libraries ...
-jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
+jcommon-jar-file=jcommon-1.0.0-pre2.jar
 
 ##############################################################
 #
