Updated libraries; some work on the plain text target (fix for old (pre 1992) epson printers)

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -37,7 +37,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
+jcommon-jar-file=jcommon-1.0.0-pre2.jar
 pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
@@ -45,12 +45,12 @@ beanshell-jar-file=bsh-1.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
-jcommon-xml-jar-file=jcommon-xml-1.0.0-pre2-cvs.jar
+jcommon-xml-jar-file=jcommon-xml-1.0.0-pre2.jar
 
 # Used by: module-output-pdf
 #          module-output-table-rtf
 #          module-output-support-itext
-itext-jar-file=itext-1.2.jar
+itext-jar-file=itext-1.2.3.jar
 
 # Used by: module-output-table-xml
 jakarta-poi-jar-file=poi-2.5.1-final-20040804.jar
