--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/configuration.properties
@@ -27,3 +27,27 @@ org.jfree.report.modules.gui.plaintext.Separated=false
 #
 # Defines, whether the progress dialog will be visible while exporting.
 org.jfree.report.modules.gui.plaintext.ProgressDialogEnabled=true
+
+#
+# The fallback endcoding for old epson printers.
+#
+# Valid values are:
+#
+# 0 = USA
+# 1 = France
+# 2 = Germany
+# 3 = UK
+# 4 = Denmark I
+# 5 = Sweden
+# 6 = Italy
+# 7 = Spain I
+# 8 = Japan
+# 9 = Norway
+# 10 = Denmark II
+# 11 = Spain II
+# 12 = Latin America
+#
+# For details on the supported characters, please refer to
+# your printer reference manual.
+#
+org.jfree.report.modules.gui.plaintext.FallbackEncoding=0
