--- a/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/epson-9pin-printer-specifications.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/epson-9pin-printer-specifications.properties
@@ -150,5 +150,8 @@ encoding.USSR-GOST.name=USSR-GOST (Russian)
 encoding.default.bytes=0,0
 encoding.default.charset=ASCII
 encoding.default.name=Italic
-printer.Generic-9pin.encodings=PC720,PC774,Bulgaria,PC853,TIS16,PC860,PC-APTEC,ISO-Latin-1T,TIS13,PC932,PC865,Roman-8,CodeMJK,TIS17,PC863,PC869,PC866LAT,USSR-GOST,PC851,KU42,PC862,TSM,TIS18,PC861,default,MAZOWIA,ISO8859-7,PC864,PC708,PC857,Hebrew-8,ISO8859-1,ISO-8859-2,ISCII,Hebrew-7,PC852,BRASCII,PC437-greek,PC866,PC855,Estonia,ECMA-94-1,TIS11,PC-ISCII,Abicomp,PC850,PC437
-printer.Generic-9pin.name=Generic
+printer.Generic-9pin-post1992.encodings=PC720,PC774,Bulgaria,PC853,TIS16,PC860,PC-APTEC,ISO-Latin-1T,TIS13,PC932,PC865,Roman-8,CodeMJK,TIS17,PC863,PC869,PC866LAT,USSR-GOST,PC851,KU42,PC862,TSM,TIS18,PC861,default,MAZOWIA,ISO8859-7,PC864,PC708,PC857,Hebrew-8,ISO8859-1,ISO-8859-2,ISCII,Hebrew-7,PC852,BRASCII,PC437-greek,PC866,PC855,Estonia,ECMA-94-1,TIS11,PC-ISCII,Abicomp,PC850,PC437
+printer.Generic-9pin-post1992.name=Generic 9Pin (post 1992)
+printer.Generic-9pin-pre1992.encodings=PC720,PC774,Bulgaria,PC853,TIS16,PC860,PC-APTEC,ISO-Latin-1T,TIS13,PC932,PC865,Roman-8,CodeMJK,TIS17,PC863,PC869,PC866LAT,USSR-GOST,PC851,KU42,PC862,TSM,TIS18,PC861,default,MAZOWIA,ISO8859-7,PC864,PC708,PC857,Hebrew-8,ISO8859-1,ISO-8859-2,ISCII,Hebrew-7,PC852,BRASCII,PC437-greek,PC866,PC855,Estonia,ECMA-94-1,TIS11,PC-ISCII,Abicomp,PC850,PC437
+printer.Generic-9pin-pre1992.name=Generic 9Pin (pre 1992)
+printer.Generic-9pin-pre1992.operations=no.assign.character.table
