Config description added

--- a/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
@@ -9,4 +9,11 @@
 #
 org.jfree.report.modules.output.table.base.StrictLayout=false
 
-org.jfree.report.targets.table.TableWriter.DebugReportLayout=true
+#
+# Defines, whether the table writer will print debug messages.
+# These messages will report overlapping elements and commit points,
+# and therefore great to debug report definitions.
+#
+# You certainly don't want that switch to be enabled in production
+# environments.
+org.jfree.report.targets.table.TableWriter.DebugReportLayout=false
