Module names normalized

--- a/jfreereport/source/org/jfree/report/modules/misc/beanshell/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/beanshell/module.properties
@@ -5,7 +5,7 @@
 #
 
 module-info:
-  name: bean-shell-module
+  name: misc-beanshell
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Classes to support beanshell scriptable expression.
   version.major: 0
