--- a/jfreereport/source/org/jfree/report/modules/misc/tablemodel/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/tablemodel/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: tablemodel-utility
+  name: misc-tablemodel
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Some utility classes to make tablemodels easier to use.
   version.major: 0
