--- a/jfreereport/source/org/jfree/report/modules/parser/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/base/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: xml-parser-base
+  name: parser-base
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Base and frontend classes for the xml parsers. 
   version.major: 0
