--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -76,19 +76,25 @@ org.jfree.report.modules.gui.html.Module=org.jfree.report.modules.gui.html.HTMLE
 org.jfree.report.modules.gui.pdf.Module=org.jfree.report.modules.gui.pdf.PDFExportGUIModule
 org.jfree.report.modules.gui.plaintext.Module=org.jfree.report.modules.gui.plaintext.PlainTextExportGUIModule
 org.jfree.report.modules.gui.print.Module=org.jfree.report.modules.gui.print.AWTPrintingGUIModule
+org.jfree.report.modules.gui.rtf.Module=org.jfree.report.modules.gui.rtf.RTFExportGUIModule
 org.jfree.report.modules.gui.xls.Module=org.jfree.report.modules.gui.xls.ExcelExportGUIModule
+
+#
+# Base modules ..
+org.jfree.report.modules.base.logging.Module=org.jfree.report.DefaultLogModule
+org.jfree.report.modules.base.core.Module=org.jfree.report.JFreeReportCoreModule
 
 #
 # Helper modules ..
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
-org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.DefaultLogModule
 org.jfree.report.modules.misc.configstore.base.Module=org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
 org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStoreModule
 org.jfree.report.modules.misc.survey.Module=org.jfree.report.modules.misc.survey.SurveyModule
 
 # Output modules
+org.jfree.report.modules.output.meta.Module=org.jfree.report.modules.output.meta.MetaElementModule
 org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
 org.jfree.report.modules.output.xml.Module=org.jfree.report.modules.output.xml.XMLModule
 org.jfree.report.modules.output.support.itext.Module=org.jfree.report.modules.output.support.itext.BaseFontModule
