--- a/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: preview-base-classes
+  name: gui-base
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Defines the default preview components and provides base
                classes for the pluggable export module dialogs.
