--- a/jfreereport/source/org/jfree/report/modules/gui/config/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/config/module.properties
@@ -1,5 +1,5 @@
 module-info:
-  name: report-config-gui
+  name: gui-config
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A GUI for the report configuration setup.
   version.major: 0
