--- a/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: report-writer-gui
+  name: gui-converter
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A GUI for the report writer to convert older reports
                into the new format.
