--- a/jfreereport/source/org/jfree/report/modules/gui/csv/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: cvs-export-gui
+  name: gui-csv
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for the CSV export.
   version.major: 0
