--- a/jfreereport/source/org/jfree/report/modules/gui/html/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: html-export-gui
+  name: gui-html
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for the HTML table export.
   version.major: 0
