--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: pdf-export-gui
+  name: gui-pdf
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for the PDF pageable export.
   version.major: 0
