--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: plaintext-export-gui
+  name: gui-plaintext
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for the plain text export.
   version.major: 0
