--- a/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: java.awt.print-export-gui
+  name: gui-print
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for JDK 1.2.2 style printing.
   version.major: 0
