--- a/jfreereport/source/org/jfree/report/modules/gui/xls/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/module.properties
@@ -5,7 +5,7 @@
 #
 
 module-info:
-  name: xls-export-gui
+  name: gui-xls
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for the Excel table export.
   version.major: 0
