--- a/jfreereport/source/org/jfree/report/modules/misc/configstore/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/configstore/base/module.properties
@@ -8,7 +8,7 @@
 #
 
 module-info:
-  name: base-configstore-module
+  name: misc-configstore-base
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Initialializer to support external configuration storages.
   version.major: 0
