--- a/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: ext-parser-reference-doc
+  name: misc-referencedoc
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A reference documentation generatorBeanInfoBeanInfoBeanInfo for the ext parser.
   version.major: 0
