--- a/jfreereport/source/org/jfree/report/modules/misc/survey/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/survey/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: survey-support
+  name: misc-survey
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Utility classes for creating survey reports.
   version.major: 0
