--- a/jfreereport/source/org/jfree/report/modules/output/csv/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/csv/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: csv-raw-export
+  name: output-csv
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Simple CSV export module. Prints the raw datarow contents.
   version.major: 0
