--- a/jfreereport/source/org/jfree/report/modules/output/pageable/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/base/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: pageable-export-base
+  name: output-pageable-base
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Base classes for page style export targets.
   version.major: 0
