--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: pdf-pageable-export
+  name: output-pageable-pdf
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Export to PDF files.
   version.major: 0
