--- a/jfreereport/source/org/jfree/report/modules/output/table/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: table-export-base
+  name: output-table-base
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Base classes for table style export targets.
   version.major: 0
