--- a/jfreereport/source/org/jfree/report/modules/output/table/csv/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/csv/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: csv-table-export
+  name: output-table-csv
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Exports reports to CSV files while trying to preserve the report layout.
   version.major: 0
