--- a/jfreereport/source/org/jfree/report/modules/output/table/html/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: html-table-export
+  name: output-table-html
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: exports the report into (X)HTML tables.
   version.major: 0
