--- a/jfreereport/source/org/jfree/report/modules/output/table/rtf/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/rtf/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: rtf-table-export
+  name: output-table-rtf
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: exports the report into rtf files. This target is experimental.
   version.major: 0
