--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: excel-table-export
+  name: output-table-xls
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: exports the report into excel tables.
   version.major: 0
