--- a/jfreereport/source/org/jfree/report/modules/output/xml/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/xml/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: xml-raw-export
+  name: output-xml
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Simple XML export module. Prints the raw report
               components without doing any layouting.
