--- a/jfreereport/source/org/jfree/report/modules/parser/ext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/ext/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: ext-xml-parser
+  name: parser-ext
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: An extensible xml parser for complex report definitions.
                This package also contains the report definition writer.
