--- a/jfreereport/source/org/jfree/report/modules/parser/extwriter/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/extwriter/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: report-writer
+  name: parser-extwriter
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A report writer that is able to create an xml definition for
               an given JFreeReport object.
