--- a/jfreereport/source/org/jfree/report/modules/parser/simple/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/simple/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: simple-xml-parser
+  name: parser-simple
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: An simple xml parser for basic report definitions.
   version.major: 0
