The final commit: Added an about frame to the preview base ..

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -104,3 +104,4 @@ module-gui-pdf-file=${targetdir}${jfreereport.name}-gui-pdf-${jfreereport.versio
 module-gui-plaintext-file=${targetdir}${jfreereport.name}-gui-plaintext-${jfreereport.version}.jar
 module-gui-print-file=${targetdir}${jfreereport.name}-gui-print-${jfreereport.version}.jar
 module-gui-xls-file=${targetdir}${jfreereport.name}-gui-xls-${jfreereport.version}.jar
+module-gui-rtf-file=${targetdir}${jfreereport.name}-gui-rtf-${jfreereport.version}.jar
