--- a/jfreereport/source/org/jfree/report/modules/gui/rtf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/rtf/configuration.properties
@@ -13,7 +13,7 @@ org.jfree.report.modules.gui.rtf.Enable=true
 # here is suitable for the default configuration. Increasing the
 # order value will move the menu entry for this plugin to the end of the list.
 #
-org.jfree.report.modules.gui.rtf.Order=20
+org.jfree.report.modules.gui.rtf.Order=25
 
 #
 # Set to true, to show a button for this export type on the toolbar.
@@ -22,7 +22,7 @@ org.jfree.report.modules.gui.rtf.AddToToolbar=false
 #
 # Set to true, to separate the menu and toolbar entry from other elements.
 # This inserts an separator after the menu entry.
-org.jfree.report.modules.gui.rtf.Separated=true
+org.jfree.report.modules.gui.rtf.Separated=false
 
 #
 # Defines, whether the progress dialog will be visible while exporting.
