--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -28,7 +28,6 @@ junit-jar-file=junit.jar
 log4j-jar-file=log4j-1.2.3.jar
 jlfgr-archive-file=jlfgr-1_0.zip
 servlet-jar-file=servlet.jar
-jfreechart-jar-file=jfreechart-0.9.13.jar
-jfreechart-demo-jar-file=jfreechart-0.9.13-demo.jar
+jfreechart-jar-file=jfreechart-1.0.0-pre1.jar
 
 
