--- a/jfreereport-ext/ant/targets.properties
+++ b/jfreereport-ext/ant/targets.properties
@@ -5,16 +5,16 @@
 ##############################################################
 #
 # Generated files ...
-jfreereport-chart-demo-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-chart-demo.jar
-jfreereport-servlet-demo-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-servlet-demo.jar
+jfreereport-chart-demo-jar-file=${ext.targetdir}${jfreereport.name}-chart-demo-${jfreereport.version}.jar
+jfreereport-servlet-demo-jar-file=${ext.targetdir}${jfreereport.name}-servlet-demo-${jfreereport.version}.jar
 jfreereport-junit-jar-file=${ext.targetdir}${jfreereport.name}-${jfreereport.version}-junit.jar
 
-module-ext-java14config-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14config.jar
-module-ext-java14log-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14log.jar
-module-ext-java14print-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14print.jar
-module-ext-log4jlog-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-log4jlog.jar
-module-ext-java14imageio-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-java14imageio.jar
-module-ext-barcode-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ext-module-barcode.jar
+module-ext-java14config-file=${targetdir}${jfreereport.name}-ext-module-java14config-${jfreereport.version}.jar
+module-ext-java14log-file=${targetdir}${jfreereport.name}-ext-module-java14log-${jfreereport.version}.jar
+module-ext-java14print-file=${targetdir}${jfreereport.name}-ext-module-java14print-${jfreereport.version}.jar
+module-ext-log4jlog-file=${targetdir}${jfreereport.name}-ext-module-log4jlog-${jfreereport.version}.jar
+module-ext-java14imageio-file=${targetdir}${jfreereport.name}-ext-module-java14imageio-${jfreereport.version}.jar
+module-ext-barcode-file=${targetdir}${jfreereport.name}-ext-module-barcode-${jfreereport.version}.jar
 
 #
 # Support for the maven build 
