Fixed width for the HTML-Tables.

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -66,6 +66,14 @@ org.jfree.report.WarnInvalidColumns=true
 org.jfree.report.NoDefaultDebug=false
 
 #
+# Defines, whether JFreeReport should query the default page format from the printerdriver.
+# If there is no printer installed on Windows, this seems to block the JavaVM until a 
+# time out is reached.
+#
+# If this property is set to "true" a hard coded default is used instead.
+org.jfree.report.NoPrinterAvailable=false
+
+#
 # Defines the known modules. It is not fatal if they are not found.
 #
 org.jfree.report.modules.gui.base.Module=org.jfree.report.modules.gui.base.PreviewBaseModule
