PDFExport dialog now maps encodings "UTF-xx" to "Identity-H"

--- a/jfreereport/source/org/jfree/report/demo/demos.properties
+++ b/jfreereport/source/org/jfree/report/demo/demos.properties
@@ -68,3 +68,7 @@ demo.16.name=Survey Report Demo
 demo.16.class=org.jfree.report.demo.SurveyScaleDemo
 demo.16.description=Demonstrates how to create a report for surveys using the new survey module.
 
+demo.17.name=Report Controler Demo
+demo.17.class=org.jfree.report.demo.ReportControlerDemo
+demo.17.description=Demonstrates how to use a report controler to customize the report from within the report preview.
+
