--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -10,7 +10,7 @@
 # Defines whether to define a body fragment only. This removes
 # the header and body tags and makes it easy to include the generated
 # content in own pages.
-#org.jfree.report.modules.output.table.html.BodyFragment=UTF-8
+#org.jfree.report.modules.output.table.html.BodyFragment=false
 
 #
 # Defines whether to generate XHTML1.0 or HTML4.0 content.
@@ -23,3 +23,14 @@
 #
 # Defines a author for generated HTML documents.
 #org.jfree.report.modules.output.table.html.Author=
+
+#
+# Defines, whether empty cells will be controled using CSS.
+# If this is set to true, the Table get the style property
+# "empty-cells: show" assigned and the otherwise required
+# no-break-space entites will no longer be generated.
+#
+# The Internet-Explorer is not able to use correct CSS2 yet - they never
+# obeyed to standards anyway, so that's no surprise that this defaults
+# to "false"..
+org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
