HTML: Fix of the fix needed a fix (&nbsp; reference messed up the file) Added Option to give image sizes in Point or Pixels in HTML.

--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -34,3 +34,13 @@
 # obeyed to standards anyway, so that's no surprise that this defaults
 # to "false"..
 org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
+
+#
+# Defines, whether image sizes should be given in device
+# independent Point unit (1/72 inch) or in pixels (which
+# is device dependent and makes it hard to predict the
+# final size in the HTML-Page.
+#
+# Most users are used to think in pixels, so this will be
+# the default.
+org.jfree.report.modules.output.table.html.UseDeviceIndependentImageSize=false
