More fixes to the HTML stuff - row styles also define the background color

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -117,3 +117,8 @@ org.jfree.report.modules.gui.base.ProgressBarEnabled=true
 # (except any passwords) into the local configuration base. Set this
 # to false if you are concerned about any privacy leaks. 
 org.jfree.report.modules.gui.base.StoreExportDialogInputs=true
+
+#
+# Defines, whether to use the Report's Locale for the GUI (if available)
+# or whether Locale.getDefault() gets used.
+org.jfree.report.modules.gui.base.UseReportLocale=false
