Jcommon updated to pre3

--- a/jfreereport/source/org/jfree/report/demo/demos.properties
+++ b/jfreereport/source/org/jfree/report/demo/demos.properties
@@ -1,4 +1,4 @@
-size=18
+size=19
 
 demo.0.name=Hello World
 demo.0.class=org.jfree.report.demo.HelloWorld
@@ -72,3 +72,6 @@ demo.17.name=Report Controler Demo
 demo.17.class=org.jfree.report.demo.ReportControlerDemo
 demo.17.description=Demonstrates how to use a report controler to customize the report from within the report preview.
 
+demo.18.name=Multiple Reports Demo
+demo.18.class=org.jfree.report.demo.multireport.MultiReportDemo
+demo.18.description=Demonstrates how to join several tablemodels into a single report.
