Fixed SurveyScaleDemo + ..Expression

--- a/jfreereport/source/org/jfree/report/demo/demos.properties
+++ b/jfreereport/source/org/jfree/report/demo/demos.properties
@@ -58,11 +58,11 @@ demo.13.description=Demonstrates how to create a report with an optional groupin
 
 demo.14.name=Report-Footer@Bottom-of-page Demo (Simple)
 demo.14.class=org.jfree.report.demo.ReportFooterDemo
-demo.14.description=Demonstrates how to create a report for surveys using the new survey module.
+demo.14.description=Demonstrates how to put a report footer at the bottom of the last page.
 
 demo.15.name=Report-Footer@Bottom-of-page Demo (Complex)
 demo.15.class=org.jfree.report.demo.ReportFooter2Demo
-demo.15.description=Demonstrates how to create a report for surveys using the new survey module.
+demo.15.description=Demonstrates how to put a report footer at the bottom of the last page.
 
 demo.16.name=Survey Report Demo
 demo.16.class=org.jfree.report.demo.SurveyScaleDemo
