--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
@@ -41,3 +41,15 @@ error=Error
 example=Example {0}
 
 main-frame.title.pattern=JFreeReport {0} Demo
+
+demo.surveyscale.Title=Survey Scale Demo
+demo.surveyscale.Description=Demonstrates how to create a report for surveys using the new survey module.
+
+demo.lgpl.Title=LGPL Text Demo
+demo.lgpl.Description=A demo report trying to print the complete text of the GNU licence. Demonstrates the limitation of one page per band.
+
+demo.report-footer.simple.Description=Demonstrates how to put a report footer at the bottom of the last page.
+demo.report-footer.simple.Title=Report-Footer Demo (Simple)
+
+demo.report-footer.complex.Description=Demonstrates how to put a report footer at the bottom of the last page.
+demo.report-footer.complex.Title=Report-Footer Demo (Complex)
