Fixed for null-parentdir, excel exports with more than 4000 styles

--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
@@ -17,3 +17,5 @@ org.jfree.report.modules.output.table.xls.EnhancedDataFormat=true
 # If no paper is defined, an suitable paper will be selected automaticly.
 # Valid values are "Landscape" or "Portrait" 
 #org.jfree.report.modules.output.table.xls.PaperOrientation=Landscape
+
+org.jfree.report.modules.output.table.xls.HardStyleCountLimit=true
