More on the classloader topic: Changed resource paths to global paths; Fixed the i18n issues (parser, demo, resource bundle lookup)

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -52,7 +52,9 @@ org.jfree.report.modules.gui.base.EncodingsAvailable=all
 #
 # Defines the name of the properties file used to define the available encodings.
 # The property points to a resources in the classpath, not to a real file!
-org.jfree.report.modules.gui.base.EncodingsFile=/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
+#
+# The resource name must be a global resource name (no leading slash!)
+org.jfree.report.modules.gui.base.EncodingsFile=org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
 
 #
 # Defines, whether and how the navigation functionallity will be exposed to
