HtmlTableRow: Can carry border definitions

--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -44,3 +44,9 @@ org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
 # Most users are used to think in pixels, so this will be
 # the default.
 org.jfree.report.modules.output.table.html.UseDeviceIndependentImageSize=false
+
+#
+# Defines, whether table rows should carry a border definition
+# (in addition to the cell definitions). This is a workaround
+# for a layout bug in the Mozilla browser family. 
+org.jfree.report.modules.output.table.html.TableRowBorderDefinition=true
